# grpc

./: .gitignore  CMakeLists.txt  README.md
cmake/: cmake_filegroups.cmake  disable_alpn.cmake  msvc_static_runtime.cmake  openssl_disable_init.cmake
cmake/gpr/: CMakeLists.txt
cmake/grpc/: CMakeLists.txt
cmake/grpc++/: CMakeLists.txt
cmake/test_libs/: CMakeLists.txt
cmake/tests/: CMakeLists.txt
src/core/lib/security/transport/: security_connector.c
src/core/lib/tsi/: ssl_transport_security.c
src/core/security/: security_connector.c
src/core/support/: string_win32.c
src/core/tsi/: ssl_transport_security.c
templates/: CMakeLists.txt.template
tools/cmake/: gRPCConfig.cmake.in
